[package]
name = "lotto"
version = "0.1.0"
authors = ["lg <lauren@informal.systems>", "katarina nois"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.4.0"
cosmwasm-schema = "1.4.0"
cw-storage-plus = "1.1.0"
nois = "0.8.0"
cw2 = "1.1.1"
anybuf = "0.3.0"
schemars = "0.8.10"
thiserror = { version = "1.0.31" }

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
