[package]
name = "randdrop"
version = "0.6.0"
authors = ["Katarina","Simon"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.4.0"
cosmwasm-schema = "1.4.0"
cw-storage-plus = "1.1.0"
nois = "0.8.0"
cw2 = "1.1.1"
thiserror = { version = "1.0.23" }
hex = { version = "0.4" }
sha2 = { version = "0.10.6", default-features = false }


[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

